syntax = "proto3";

package order;

option go_package = "order-system/proto";

// OrderService handles order-related operations
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {}
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse) {}
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}

// Order represents an order in the system
message Order {
  string id = 1;
  string customer_id = 2;
  string status = 3;
  repeated OrderItem items = 4;
  string created_at = 5;
  string updated_at = 6;
}

// OrderItem represents an item in an order
message OrderItem {
  string id = 1;
  string product_id = 2;
  int32 quantity = 3;
  float price = 4;
}

// CreateOrderRequest represents a request to create a new order
message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
}

// GetOrderRequest represents a request to get an order
message GetOrderRequest {
  string order_id = 1;
}

// UpdateOrderRequest represents a request to update an order
message UpdateOrderRequest {
  string order_id = 1;
  string status = 2;
  repeated OrderItem items = 3;
}

// DeleteOrderRequest represents a request to delete an order
message DeleteOrderRequest {
  string order_id = 1;
}

// OrderResponse represents a response containing order data
message OrderResponse {
  Order order = 1;
}

// DeleteOrderResponse represents a response to a delete order request
message DeleteOrderResponse {
  bool success = 1;
} 